--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link type="text/css" rel="stylesheet" href="sass/materialize.css" media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -22,7 +22,7 @@
                 <ul id="slide-out" class="side-nav">
 
                 </ul>
-                <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="small material-icons">menu</i></a>
+                <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
                 <a href="index.html" class="brand-logo center">Mihran Mashhud</a>
             </div>
         </nav>
