--- a/index.html
+++ b/index.html
@@ -90,35 +90,36 @@
         <div class="section white" id="skllls">
             <div class="row  container">
                 <h2 class="header">Skills</h2>
-                <div class="col s12 m6">
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <p>Mathematics</p>
-                            <ul>
-                                <li>Got very high averages in Math in school</li>
-                                <li>Average Mathematics mark in my most recent year&#58; 96&#37;</li>
-                            </ul>
-                        </div>
-                        <div class="col s12 m6">
-                            <p>Computer Use</p>
-                            <ul>
-                                <li></li>
-                            </ul>
-                        </div>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <p>Mathematics</p>
+                        <ul>
+                            <li>Got very high averages in Math in school.</li>
+                            <li>Average Mathematics mark in my most recent year&#58; 96&#37;.</li>
+                        </ul>
                     </div>
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <p>Artistic Capabilities</p>
-                            <ul>
-                                <li></li>
-                            </ul>
-                        </div>
-                        <div class="col s12 m6">
-                            <p>Leadership</p>
-                            <ul>
-                                <li></li>
-                            </ul>
-                        </div>
+                    <div class="col s12 m6">
+                        <p>Computer Use</p>
+                        <ul>
+                            <li>Configures and does maintenance for home electronics.</li>
+                            <li>Also am able to troubleshoot software and electronics.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <p>Artistic Capabilities</p>
+                        <ul>
+                            <li>Has a sketchbook that has many high quality drawings in it.</li>
+                            <li>Uses computer programs to create digital drawings.</li>
+                        </ul>
+                    </div>
+                    <div class="col s12 m6">
+                        <p>Leadership</p>
+                        <ul>
+                            <li>Has taken on being the leader of a robotics team at school.</li>
+                            <li>Some of the responsibilities of my leadership role in robotics are to&#58; make designs for the robots, help with measuring, and intruct duties upon other members.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
