--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li><a href="#contact_info">Contact Info</a></li>
                 </ul>
                 <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
-                <a href="index.html" class="brand-logo center">Mihran Mashhud</a>
+                <a href="#contact-info" class="brand-logo center">Mihran Mashhud</a>
             </div>
         </nav>
     </header>
@@ -158,6 +158,9 @@
                 <h2 class="header">Achievements</h2>
                 <ul>
                     <p>Honours Role
+                        <div class="align-right">2015-2016</div>
+                    </p>
+                    <p>Am in International Baccalaureate Program
                         <div class="align-right">2015-2016</div>
                     </p>
                 </ul>
