--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li><a href="#contact_info">Contact Info</a></li>
                 </ul>
                 <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
-                <a href="#contact-info" class="brand-logo center">Mihran Mashhud</a>
+                <a href="#contact_info" class="brand-logo center">Mihran Mashhud</a>
             </div>
         </nav>
     </header>
