--- a/index.html
+++ b/index.html
@@ -1,160 +1,15 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 810 1110">
-        <style>
-            .st0 {
-                fill: #666666;
-            }
-
-            .st1 {
-                fill: #333333;
-            }
-
-            .st2 {
-                fill: #1A1A1A;
-            }
-
-            .st3 {
-                fill: #4D4D4D;
-            }
-
-            .st4 {
-                fill: #CCCCCC;
-            }
-
-            .st5 {
-                fill: #E6E6E6;
-            }
-
-            .st6 {
-                fill: #B3B3B3;
-            }
-
-            .st7 {
-                fill: #808080;
-            }
-
-            .st8 {
-                fill: #999999;
-            }
-
-            .st9 {
-                fill: #F2F2F2;
-            }
-
-            .st10 {
-                fill: #080808;
-            }
-        </style>
-        <g id="face">
-            <path id="XMLID_4_" d="M419 545L275 680 113 545l144-54z" />
-            <path id="XMLID_6_" d="M419 545l144 135 162-135-144-54z" />
-            <path id="XMLID_7_" d="M419 545l-81 171 81-27z" />
-            <path id="XMLID_8_" d="M419 1103l-153-63 36-81z" />
-            <path id="XMLID_9_" d="M176 914l54-81 36 207z" />
-            <path id="XMLID_10_" d="M113 545l9 108 18 117 36-54z" />
-            <path id="XMLID_11_" d="M176 914l45-162-81 18z" />
-            <path id="XMLID_12_" d="M275 680l-54 72-45-36z" />
-            <path id="XMLID_13_" d="M338 716L230 833l-9-81z" />
-            <path id="XMLID_14_" d="M302 959l-72-126 90 18z" />
-            <path id="XMLID_16_" d="M338 716l-18 135 99-81z" />
-            <path id="XMLID_17_" d="M275 680l63 36 81-171z" class="st0" />
-            <path id="XMLID_18_" d="M113 545l63 171 99-36z" class="st1" />
-            <path id="XMLID_19_" d="M140 770l36-54 45 36z" class="st2" />
-            <path id="XMLID_20_" d="M221 752l54-72 63 36z" class="st3" />
-            <path id="XMLID_21_" d="M176 914l54-81-9-81z" class="st2" />
-            <path id="XMLID_22_" d="M266 1040l36-81-72-126z" class="st2" />
-            <path id="XMLID_23_" d="M320 851l-90-18 108-117z" class="st1" />
-            <path id="XMLID_42_" d="M419 545l81 171-81-27z" class="st4" />
-            <path id="XMLID_41_" d="M419 1103l153-63-36-81z" class="st3" />
-            <path id="XMLID_40_" d="M662 914l-54-81-36 207z" class="st5" />
-            <path id="XMLID_39_" d="M725 545l-18 135-9 90-36-54z" class="st5" />
-            <path id="XMLID_38_" d="M662 914l-45-162 81 18z" class="st5" />
-            <path id="XMLID_37_" d="M563 680l54 72 45-36z" class="st6" />
-            <path id="XMLID_36_" d="M500 716l108 117 9-81z" class="st6" />
-            <path id="XMLID_35_" d="M536 959l72-126-90 18z" class="st7" />
-            <path id="XMLID_33_" d="M500 716l18 135-99-81z" class="st0" />
-            <path id="XMLID_32_" d="M563 680l-63 36-81-171z" class="st6" />
-            <path id="XMLID_31_" d="M725 545l-63 171-99-36z" class="st4" />
-            <path id="XMLID_30_" d="M698 770l-36-54-45 36z" class="st4" />
-            <path id="XMLID_29_" d="M617 752l-54-72-63 36z" class="st7" />
-            <path id="XMLID_28_" d="M662 914l-54-81 9-81z" class="st4" />
-            <path id="XMLID_27_" d="M572 1040l-36-81 72-126z" class="st8" />
-            <path id="XMLID_26_" d="M518 851l90-18-108-117z" class="st8" />
-            <path id="XMLID_43_" d="M419 770v-81l81 27z" class="st3" />
-            <path id="XMLID_44_" d="M338 716l81-27v81z" class="st2" />
-            <path id="XMLID_45_" d="M419 770v90l99-9z" class="st7" />
-            <path id="XMLID_46_" d="M320 851l99-81v90z" class="st3" />
-            <path id="XMLID_15_" d="M302 959l117 54v90z" class="st2" />
-            <path id="XMLID_24_" d="M419 860l-117 99 117 54z" />
-            <path id="XMLID_25_" d="M320 851l99 9-117 99z" class="st2" />
-            <path id="XMLID_34_" d="M536 959l-117 54v90z" class="st1" />
-            <path id="XMLID_47_" d="M419 860l117 99-117 54z" class="st3" />
-            <path id="XMLID_48_" d="M518 851l18 108-117-99z" class="st0" />
-            <path id="XMLID_49_" d="M194 365l-81 180 135-117z" />
-            <path id="XMLID_50_" d="M284 293l-90 72 126 9z" />
-            <path id="XMLID_5_" d="M284 293l135-18v99z" class="st2" />
-            <path id="XMLID_52_" d="M419 545l-63-90 63-81z" class="st7" />
-            <path id="XMLID_53_" d="M248 428l72-54 36 81z" class="st1" />
-            <path id="XMLID_54_" d="M257 491l99-36-108-27z" />
-            <path id="XMLID_55_" d="M113 545l135-117 9 63z" class="st2" />
-            <path id="XMLID_56_" d="M356 455l-99 36 162 54z" class="st3" />
-            <path id="XMLID_57_" d="M194 365l54 63 72-54z" class="st2" />
-            <path id="XMLID_58_" d="M284 293l135 81h-99z" class="st0" />
-            <path id="XMLID_59_" d="M356 455l63-81h-99z" class="st8" />
-            <path id="XMLID_69_" d="M644 365l81 180-135-117z" class="st9" />
-            <path id="XMLID_68_" d="M554 293l90 72-126 9z" class="st1" />
-            <path id="XMLID_67_" d="M554 293l-135-18v99z" class="st3" />
-            <path id="XMLID_66_" d="M419 545l63-90-63-81z" class="st8" />
-            <path id="XMLID_65_" d="M590 428l-72-54-36 81z" class="st6" />
-            <path id="XMLID_64_" d="M581 491l-99-36 108-27z" class="st8" />
-            <path id="XMLID_63_" d="M725 545L590 428l-9 63z" class="st5" />
-            <path id="XMLID_62_" d="M482 455l99 36-162 54z" class="st6" />
-            <path id="XMLID_61_" d="M644 365l-54 63-72-54z" class="st1" />
-            <path id="XMLID_60_" d="M554 293l-135 81h99z" class="st0" />
-            <path id="XMLID_51_" d="M482 455l-63-81h99z" class="st7" />
-        </g>
-        <g id="hair">
-            <path id="XMLID_259_" d="M113 545l9 108-99-306z" />
-            <path id="XMLID_258_" d="M194 365l-81 180-90-198z" class="st10" />
-            <path id="XMLID_257_" d="M5 194l243 135-189-54z" />
-            <path id="XMLID_256_" d="M194 365L59 275l189 54z" class="st10" />
-            <path id="XMLID_255_" d="M23 347l171 18-135-90z" />
-            <path id="XMLID_254_" d="M122 176l126 153L5 194z" class="st10" />
-            <path id="XMLID_253_" d="M140 50l81 162-99-36z" class="st10" />
-            <path id="XMLID_252_" d="M248 329l-27-117-99-36z" />
-            <path id="XMLID_251_" d="M383 5L221 212 140 50z" />
-            <path id="XMLID_250_" d="M284 293l-63-81 27 117z" />
-            <path id="XMLID_249_" d="M383 5l-99 288-63-81z" class="st10" />
-            <path id="XMLID_248_" d="M365 284l135-108-216 117z" />
-            <path id="XMLID_247_" d="M383 5l297 261-18-144z" />
-            <path id="XMLID_246_" d="M671 509l9-243-72 27z" class="st2" />
-            <path id="XMLID_245_" d="M509 356v-90l162 243z" />
-            <path id="XMLID_244_" d="M365 284l144-18v90z" class="st10" />
-            <path id="XMLID_243_" d="M383 5l45 117-144 171z" />
-            <path id="XMLID_242_" d="M608 293L500 176l180 90z" />
-            <path id="XMLID_241_" d="M383 5l117 171 180 90z" class="st10" />
-            <path id="XMLID_240_" d="M428 122l72 54-216 117z" class="st10" />
-            <path id="XMLID_239_" d="M383 5l117 171-72-54z" class="st2" />
-            <path id="XMLID_238_" d="M509 266l-144 18 135-108z" class="st2" />
-            <path id="XMLID_237_" d="M671 509L509 266l99 27z" class="st10" />
-            <path id="XMLID_236_" d="M500 176l108 117-99-27z" />
-            <path id="XMLID_235_" d="M707 680l18-135 45 45z" class="st2" />
-            <path id="XMLID_234_" d="M671 446l54 99 81-153z" class="st1" />
-            <path id="XMLID_233_" d="M770 590l36-198-81 153z" />
-            <path id="XMLID_232_" d="M680 266l63 153-72 27z" />
-            <path id="XMLID_231_" d="M662 122l108 117-90 27z" class="st2" />
-            <path id="XMLID_230_" d="M743 419l63-27-126-126z" class="st2" />
-            <path id="XMLID_229_" d="M770 239l36 153-126-126z" />
-        </g>
-    </svg>
+    <script type="text/javascript" src="js/script.js"></script>
+    <nav>
+        <p>Mihran Mashhud</p>
+    </nav>
 </body>
 
 </html>
